# Milo-AI_Barista

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/tests/: test_api.py  test_models.py  test_orchestrator.py  test_prompts_and_skills.py  test_specialists.py  test_tools.py
migrations/: env.py
migrations/versions/: 20260504_0001_create_memory_schema.py  20260504_0002_add_cart_order_schema.py  20260504_0003_add_menu_items_catalog.py  20260508_0004_latency_memory_optimizations.py  20260508_0004_neon_existing_schema_marker.py  20260513_0004_add_memory_summaries.py  20260513_0005_drop_memory_summary_unused_columns.py
scripts/: index_rag.py  setup_qdrant.py
src/cafe/: __init__.py  config.py
src/cafe/Docs/: BTB_Menu_Attributes.md  BTB_Menu_Enhanced.md
src/cafe/agents/: __init__.py  agent_cache.py  llm.py  memory.py  orchestrator.py  prompts.py  session_manager.py  specialist_tools.py
src/cafe/api/: __init__.py  debug.py  debug_dashboard.py  main.py  schemas.py
src/cafe/core/: __init__.py  background_jobs.py  background_tasks.py  control_loop.py  debug_trace.py  deterministic_menu.py  fast_router.py  (+9 more)
tests/: conftest.py  test_agent_cache.py  test_api.py  test_config.py  test_control_loop.py  test_debug_dashboard.py  test_fast_router.py  test_llm.py  test_memory.py  test_menu_index_service.py  test_models.py  test_observability.py  test_orchestrator.py  test_parallel_specialists.py  test_prompts_and_skills.py  test_rag_service.py  test_services.py  test_specialist_tools_context.py  test_specialists.py  test_streaming.py  test_tools.py
(+55 files in other folders)
